<resources>
    <string name="app_name">Sale Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="background_image">Background Image</string>
    <string name="banner_text">Enter the sale amount and cost</string>
    <string name="sale_percent">Sale (%)</string>
    <string name="hint_sale">25</string>
    <string name="cost_dollar">Cost ($)</string>
    <string name="hint_cost">75</string>
    <string name="error_msg_sale_or_cost_not_valid">The sale and cost must not be empty and must be greater than 0</string>
    <string name="press_calculate">You must press calculate before seeing sale details</string>

    <string name="you_pay">You Pay: $</string>
    <string name="you_save">You Save: $</string>
    <string name="original_price">Original Price: $</string>
    <string name="sale_hint">25</string>
    <string name="cost_hint">75</string>
    <string name="calculate">Calculate</string>
    <string name="details">Details</string>
    <string name="about">About</string>
    <string name="sale">Sale</string>
    <!--    <string name="details">Details</string>-->

    <plurals name="calcs_done">
        <item quantity="one">Calculation done:</item>
        <item quantity="other">Calculations done:</item>
    </plurals>
    <string name="title_activity_sale_details1">Sale Details</string>

    <string name="discount">Discount</string>
    <string name="title_use_auto_save">Use Auto Save</string>
    <string name="title_activity_settings">Settings Activity</string>

    <string name="auto_save_key">Auto-Save</string>
    <string name="auto_save_off">On exit, the calculations in progress will not be saved</string>
    <string name="auto_save_on">On exit, the calculations in progress will be saved</string>
    <string name="auto_save_title">Auto-Save Calculations on Exit</string>
    <string name="night_mode_key">Night Mode</string>
    <string name="night_mode_title">Night/Dark Mode</string>
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Use Night/Dark Mode (unless disabled in OS Settings)</string>
    <string name="display_header">Display</string>
    <string name="app">App</string>

</resources>