<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sale_calculator.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText" />
<!--    <item-->
<!--        android:id="@+id/action_toggle_auto_save"-->
<!--        android:checkable="true"-->
<!--        android:title="@string/title_use_auto_save"-->
<!--        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_sale_details"
        android:title="@string/details"
        app:showAsAction="ifRoom|withText" />

</menu>